--- a/noticias/noticia-en-construccion.html
+++ b/noticias/noticia-en-construccion.html
@@ -40,7 +40,7 @@
             </div>
             <img src="../recursos/imagenes/loading.png" alt="Periodistas trabajando duro en construir una noticia con bloques de Lego" class="noticia-imagen">
             <div class="noticia-contenido">
-                <p>Estimado lector de Noticias Falsas,</p>
+                <p>Estimado lector de El Despropiado,</p>
                 <p>Lamentamos informarle que esta noticia aún está en construcción. Nuestro equipo de periodistas imaginarios está trabajando arduamente para fabricar los hechos más inverosímiles y las citas más absurdas para su entretenimiento.</p>
                 <p>Mientras tanto, le ofrecemos algunas alternativas para su consideración:</p>
                 <ul>
