--- a/suscripcion.html
+++ b/suscripcion.html
@@ -128,6 +128,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="recursos/script.js"></script>
 </body>
 </html>
